2011-08-16  Jason Merrill  <jason@redhat.com>

	* pt.c (instantiate_class_template_1): If DECL_PRESERVE_P is set
	on a member function or static data member, call mark_used.

	PR c++/50054
	* typeck2.c (cxx_incomplete_type_diagnostic): Handle
	init_list_type_node.

2011-08-13  Jason Merrill  <jason@redhat.com>

	PR c++/50075
	* name-lookup.c (local_bindings_p): New.
	* name-lookup.h: Declare it.
	* lex.c (unqualified_name_lookup_error): Use it.

	PR c++/50059
	* error.c (dump_expr): Handle MODIFY_EXPR properly.

	* decl.c (grok_reference_init): Handle constexpr here.
	* call.c (initialize_reference): Not here.

2011-08-12  David Li  <davidxl@google.com>

	* class.c (update_vtable_entry_for_fn): Set
	LOST_PRIMARY bit properly.

2011-08-12  Jason Merrill  <jason@redhat.com>

	PR c++/50034
	* call.c (convert_arg_to_ellipsis): force_rvalue only in
	potentially evaluated context.

2011-08-12  Richard Guenther  <rguenther@suse.de>

	* call.c (build_over_call): Instead of memcpy use an
	assignment of two MEM_REFs.

2011-08-11  Romain Geissler  <romain.geissler@gmail.com>
            Brian Hackett  <bhackett1024@gmail.com>

	* decl.c (cp_finish_decl): Invoke callbacks on finish_decl event.

2011-08-10  Richard Guenther  <rguenther@suse.de>

	* call.c (build_over_call): Call memcpy unconditionally.

2011-08-08  Jason Merrill  <jason@redhat.com>

	PR c++/50020
	* semantics.c (finish_call_expr): Don't look at 'this' if we
	had an explicit object argument.

	PR c++/50011
	* typeck2.c (check_narrowing): Fix integer logic.

2011-08-08  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* Make-lang.in (g++$(exeext)): Add $(EXTRA_GCC_LIBS).

2011-08-05  Jason Merrill  <jason@redhat.com>

	PR c++/48993
	* semantics.c (potential_constant_expression_1) [CALL_EXPR]: Sorry
	on 'this' in a constructor.

	PR c++/49921
	* semantics.c (finish_decltype_type): Call invalid_nonstatic_memfn_p.

	PR c++/49669
	* init.c (perform_member_init): Handle invalid array initializer.

	PR c++/49988